# Merlin

./: .gitignore  AUTHORS  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  NEWS  README  README.md  diff.txt
DeveloperTools/Tools/multitrack/: CMakeLists.txt  README  common.py  curves.py  divnorm.py  madx.py  merlin.py  merlin_madinterface.py  merlin_track.cpp  run.py.example  tm.py
ExamplesTutorials/: CMakeLists.txt
ExamplesTutorials/Examples/ClosedOrbit/: ClosedOrbit_Main.cpp
ExamplesTutorials/Examples/CollimatorMaterials/: CollimatorMaterials.cpp  CollimatorMaterials.root
ExamplesTutorials/Examples/HaloCollimation/: ConstructModel.cpp  HaloTracker.cpp  HaloTracker.h  QuadIntegrator.h
ExamplesTutorials/Examples/ILCML/: ILCML_main.cpp  QuadReferenceOutput.h  model_construction.cpp  model_construction.h
ExamplesTutorials/Examples/LHC/: collimator.db
ExamplesTutorials/Examples/LatticeFunctions/: LatticeFunctions_Main.cpp
ExamplesTutorials/Examples/ROOT_trackingOutput/: README  TeslaWakePotential.cpp  TrackingOutputROOT.h
ExamplesTutorials/Examples/SpinTracking/: SpinTracking_Main.cpp
ExamplesTutorials/Examples/StrayFieldClosedOrbit/: BPMVectorBuffer.h  ConstantStrayFieldProcess.cpp  StrayFieldClosedOrbit_Main.cpp
ExamplesTutorials/Examples/Tracking/: Tracking_Main.cpp
ExamplesTutorials/Examples/Trajectory/: Trajectory_Main.cpp
ExamplesTutorials/Examples/TransferLine/: plot.py  transfer_line.cpp
ExamplesTutorials/Examples/Wakefields/: TeslaCoupler.h  TeslaWakePotential.h  ex1.cpp  ex2.cpp  ex3.cpp
ExamplesTutorials/Examples/lattices/: MERLINFodo.lattice.txt  SpinRotator.lattice.txt  tesla_bds_v8.05.optics
ExamplesTutorials/Tutorials/1-LatticeConfiguration/: LatticeConfiguration.cpp  LatticeConfiguration.py
ExamplesTutorials/Tutorials/2-LatticeConfigurationMAD/: LatticeConfigurationMAD.cpp  LatticeConfigurationMAD.py
ExamplesTutorials/Tutorials/3-LatticeManipulation/: LatticeManipulation.cpp  LatticeManipulation.py
ExamplesTutorials/Tutorials/4-ParticleTracking/: ParticleTracking.cpp  ParticleTracking.py
ExamplesTutorials/Tutorials/5-ParticleBunchTracking/: ParticleBunchTracking.cpp  ParticleBunchTracking.py
ExamplesTutorials/Tutorials/6-LHCLattice/: LHCLattice.cpp  LHCLattice.py
ExamplesTutorials/Tutorials/7-CollimationAndScattering/: CollimationAndScattering.cpp  CollimationAndScattering.py
ExamplesTutorials/Tutorials/input/: LHCbeam1apertureinfo.tfs  StorageRing.tfs
MerlinExamples/: CMakeLists.txt  makefile
MerlinExamples/.svn/: all-wcprops  entries
MerlinExamples/.svn/text-base/: makefile.svn-base
MerlinExamples/AcceleratorErrors/: README  main.cpp  makefile
MerlinExamples/AcceleratorErrors/.svn/: all-wcprops  entries
MerlinExamples/ClosedOrbit/: BPMVectorBuffer.h  ClosedOrbit_Main.cpp  makefile
MerlinExamples/ClosedOrbit/.svn/: all-wcprops  entries
MerlinExamples/HaloCollimation/: ConstructModel.cpp  HaloCollimation_main.cpp  HaloTracker.cpp  HaloTracker.h  QuadIntegrator.cpp  QuadIntegrator.h
MerlinExamples/HaloCollimation/.svn/: all-wcprops  entries
MerlinExamples/ILCDFS/.svn/: all-wcprops  entries
MerlinExamples/ILCDFS/src/: Accelerator.cpp  Accelerator.h  AcceleratorWithErrors.cpp  AcceleratorWithErrors.h  BeamDynamicsModel.h  CommonDataStructures.h  ConstantGradientAdjustment.cpp  ConstantGradientAdjustment.h  ConstructSrot.cpp  ConstructSrot.h  DFSApp.cpp  DFSApp.h  DFSCorrection.cpp  DFSCorrection.h  DFSOutput.cpp  DFSOutput.h  EnergyAdjustmentPolicy.cpp  EnergyAdjustmentPolicy.h  ILCDFS_IO.cpp  ILCDFS_IO.h  ILCDFS_main.cpp  KSEnergyAdjustment.cpp  KSEnergyAdjustment.h  ModelConstruction.cpp  ModelConstruction.h  OneToOneCorrection.cpp  OneToOneCorrection.h  OptimumDispersionMatch.cpp  ParticleTrackingModel.cpp  ParticleTrackingModel.h  ResponseMatrixGenerator.cpp  ResponseMatrixGenerator.h  SMPTrackingModel.cpp  SMPTrackingModel.h  TeslaWakePotential.cpp  TeslaWakePotential.h  XTFFInterface_1.cpp  (+1 more)
MerlinExamples/ILCML/: ILCML_main.cpp  QuadReferenceOutput.cpp  QuadReferenceOutput.h  TeslaWakePotential.cpp  TeslaWakePotential.h  TrackingOutput.cpp  TrackingOutput.h  makefile  model_construction.cpp  model_construction.h
MerlinExamples/LHC/: lhc.cpp
MerlinExamples/LatticeFunctions/: LatticeFunctions_Main.cpp
MerlinExamples/ModelConstruction/: ConstructModel.cpp  ConstructModel.h
MerlinExamples/ROOT_trackingOutput/: Analyse.C  MerlinROOT_main.cpp  TeslaWakePotential.cpp  TeslaWakePotential.h  TrackingOutputROOT.cpp  TrackingOutputROOT.h  makefile
MerlinExamples/SpinTracking/: SpinTracking_Main.cpp  makefile
MerlinExamples/StrayFieldClosedOrbit/: BPMVectorBuffer.h  ConstantStrayFieldProcess.cpp  ConstantStrayFieldProcess.h  StrayFieldClosedOrbit_Main.cpp
MerlinExamples/Tracking/: Tracking_Main.cpp  Tracking_Main.py
MerlinExamples/Trajectory/: BPMVectorBuffer.h  Trajectory_Main.cpp  Trajectory_Main.py
MerlinExamples/Wakefields/: README  TeslaCoupler.h  TeslaWakePotential.cpp  TeslaWakePotential.h  ex1.cpp  ex2.cpp  ex3.cpp  makefile
MerlinExamples/lattices/: MERLINFodo.lattice.txt  SpinRotator.lattice.txt  tesla_bds_v8.05.optics  twiss.out
MerlinTests/: CMakeLists.txt  collimate_particle_process_test.cpp  tests.h
MerlinTests/BasicTests/: aperture_test.cpp  bunch_io_test.cpp  bunch_test.cpp  collimate_particle_process_test.cpp  have_python.py  landau_test.cpp  landau_test.py  landau_test_gendata.py  particle_bunch_constructor_test.cpp  random_test.cpp  random_test.py
MerlinTests/DataTable/: datatable_test.cpp  datatable_tfs_test.cpp
MerlinTests/HollowElectronLens/: basic_hollow_electron_lens_test.cpp  basic_hollow_electron_lens_test.py  diffusive_hollow_electron_lens_test.cpp
MerlinTests/OpticsTests/: lhc_fft_tune_test.cpp  lhc_optics_test.cpp
MerlinTests/ScatteringTests/: cu50_sixtrack_test.cpp  cu50_test.cpp  cu50_test.py  lhc_collimation_test.cpp  lhc_collimation_test.py  rand_test.cpp
MerlinTests/data/: Aperture_B1_6p5TeV_2016.tfs  LHCB1Aperture.tfs
UserSim/: CMakeLists.txt
UserSim/UserSim/: UserSim.cpp
UserSim/inputData/: placeholder.tfs
(+1662 files in other folders)
